fix: autocomplete styling - hide original select, fix status visibility, preserve selected value

--- a/src/client/stylesheets/_autocomplete.scss
+++ b/src/client/stylesheets/_autocomplete.scss
@@ -1,10 +1,16 @@
+// Hide the original select element when enhanced by accessible-autocomplete
+select[data-module="accessible-autocomplete"] {
+  display: none !important;
+}
+
 .autocomplete__wrapper {
   max-width: 500px;
+  position: relative;
 }
 
 .autocomplete__input {
   font-size: 19px;
-  font-family: inherit;
+  font-family: "GDS Transport", arial, sans-serif;
   border: 2px solid #0b0c0c;
   border-radius: 0;
   height: 40px;
@@ -66,4 +72,18 @@
 .autocomplete__option--no-results {
   color: #505a5f;
   cursor: not-allowed;
+}
+
+// Status announcements should be visually hidden but accessible to screen readers
+.autocomplete__status {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin-bottom: -1px;
+  margin-right: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
 }
